--- a/src/App.css
+++ b/src/App.css
@@ -326,6 +326,7 @@ footer p:nth-child(2){
 	bottom: 35px;
 	font-size: 14px; 
 }
+
 .blur-container .background {
   width: 26.875rem;
   height: 32.5rem;
@@ -705,5 +706,105 @@ footer p:nth-child(2){
 	line-height: 20px;
 }
 
+/* //////blur-container\\\\\\ */
+
+
+.blur-container .background {
+	width: 20.875rem;
+	height: 26.5rem;
+	position: absolute;
+	transform: translate(-50%, -50%);
+	left: 50%;
+	top: 50%;
+  }
+  .background .shape {
+	height: 12.5rem;
+	width: 12.5rem;
+	position: absolute;
+	border-radius: 50%;
+  }
+  .shape:first-child {
+	background: linear-gradient(#1845ad, #23a2f6);
+	left: -3rem;
+	top: -3rem;
+  }
+  .shape:last-child {
+	background: linear-gradient(to right, #ff512f, #f09819);
+	right: -0.995rem;
+	bottom: -3rem;
+  }
+  .blur-container > form {
+	min-height: 26.5rem;
+	min-width: 20rem;
+	margin-top: 30px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	flex-grow: 1;
+	padding-bottom: 0.6rem;
+	background-color: rgba(255, 255, 255, 0.13);
+	position: absolute;
+	/* transform: translate(-50%, -50%); */
+	/* top: 50%; */
+	left: calc(50% - 10.5rem);
+	border-radius: 0.625rem;
+	backdrop-filter: blur(0.625rem);
+	border: 0.125rem solid rgba(255, 255, 255, 0.1);
+	box-shadow: 0 0 2.5rem rgba(155, 150, 195, 0.6);
+	padding: 3.125rem 2.1875rem;
+  }
+  .blur-container > form * {
+	font-family: "Poppins", sans-serif;
+  
+	letter-spacing: 0.0313rem;
+	outline: none;
+	border: none;
+  }
+  .blur-container form h1 {
+	color: #ffffff;
+	font-size: 1.8rem;
+	font-weight: 500;
+	line-height: 2rem;
+	text-align: center;
+  }
+  .blur-container form p {
+	color: #ffffff;
+	font-size: 1rem;
+	font-weight: 300;
+	line-height: 1.25rem;
+	text-align: center;
+  }
+  
+  .blur-container label {
+	color: #ffffff;
+	display: block;
+	margin-top: 1.875rem;
+	font-size: 1rem;
+	font-weight: 500;
+  }
+  .blur-container input {
+	color: #ffffff;
+	display: block;
+	height: 2.7rem;
+	width: 100%;
+	background-color: rgba(255, 255, 255, 0.07);
+	border-radius: 0.1875rem;
+	padding: 0 0.625rem;
+	margin-top: 0.5rem;
+	font-size: 1.0625rem;
+	font-weight: 500;
+  }
+  
+  .blur-container button {
+	margin-top: 3.125rem;
+	width: 100%;
+	background-color: #ffffff;
+	color: #080710;
+	padding: 0.9375rem 0;
+	font-size: 1.125rem;
+	font-weight: 600;
+	border-radius: 0.3125rem;
+	cursor: pointer;
+  }
 
   }
